# voice-agents-demo

./: .env.example  .gitignore  README.md  cost-calculator.html  pyproject.toml
01-stt-playground/: 01-whisper-local.py  02-deepgram-streaming.py  03-compare-providers.py  README.md
02-tts-playground/: 01-cartesia-stream.py  02-elevenlabs-stream.py  03-kokoro-local.py  04-compare-latency.py  README.md
03-hello-voice-agent/: README.md  livekit-hello.py  pipecat-hello.py  vapi-hello.html  vapi-hello.py
04-phone-agent/: README.md
04-phone-agent/livekit-sip/: agent.py  sip-config.yaml
04-phone-agent/pipecat-phone/: agent.py  quickstart.py
04-phone-agent/retell-quickstart/: setup.py
04-phone-agent/vapi-quickstart/: assistant.json  quick-call.py  webhook-server.py
