[project]
name = "voice-agents-crash-course"
version = "0.1.0"
description = "Demo code for Voice Agents crash course presentation"
requires-python = ">=3.11"
dependencies = [
    # STT
    "openai-whisper",
    "deepgram-sdk",
    # TTS
    "cartesia",
    "elevenlabs",
    "kokoro>=0.9.4",
    "soundfile",
    # Voice agent frameworks
    "pipecat-ai[daily,deepgram,openai,cartesia,silero,runner]>=0.0.102",
    "livekit",
    "livekit-agents",
    # Phone
    "vapi-python",
    "vapi-server-sdk",
    "retell-sdk",
    # Utilities
    "python-dotenv",
    "numpy",
    "sounddevice",
    "rich",
    "loguru",
    "httpx",
]

